[project]
name = "data"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "astropy>=6.1.4",
    "geopandas>=1.0.1",
    "gpsdatetime>=1.0.41",
    "laspy[laszip,lazrs]>=2.5.4",
    "lazrs>=0.6.2",
    "orjson>=3.10.11",
    "owslib>=0.32.0",
    "pandas>=2.2.3",
    "pdal>=3.4.5",
    "py3dtiles[las]==9.0.0",
    "pyarrow>=18.0.0",
    "pydantic>=2.9.2",
    "pystac[validation]>=1.11.0",
    "ruff>=0.7.1",
    "shapely>=2.0.6",
    "tqdm>=4.66.5",
    "typer>=0.12.5",
]
[project.scripts]
kappa = "kappa.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/kappa"]


[tool.uv]
dev-dependencies = [
    "folium>=0.18.0",
    "ipywidgets>=8.1.5",
    "jupyterlab>=4.2.5",
    "lonboard>=0.10.3",
    "mapclassify>=2.8.1",
    "matplotlib>=3.9.2",
    "topojson>=1.9",
]
